# django-demo

./: Dockerfile  README.md  crud.postman_collection.json  docker-compose.yml  pyproject.toml  start.sh
apps/products/: urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/users/: urls.py  views.py
apps/users/tasks/: send_welcome_email.py
apps/users/templates/: login.html  profile.html  register.html
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
