[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Dan Sclearov <dansclearov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
psycopg2 = "^2.9.10"
python-environ = "^0.4.54"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
celery = "^5.4.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
